remove title from config  for main-top-nav-bar and add  ng-content

--- a/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-manager.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-manager.component.html
@@ -2,8 +2,7 @@
 
   <ng-container navbar>
 
-    <app-main-top-nav-bar [config]="navConfig" >
-    </app-main-top-nav-bar>
+    <app-main-top-nav-bar>Databehandling</app-main-top-nav-bar>
 
     <app-data-property-picker
       [properties]="properties" 
