--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -1,6 +1,7 @@
-<app-main-skeleton *ngIf="vm$ | async; let vm" [bottomBarHidden]="vm.selectionBarConfig">
+<app-main-skeleton *ngIf="vm$ | async; let vm" [bottomBarHidden]="vm.selectionsTitle">
 
-    <app-main-top-nav-bar navbar [config]="vm.selectionBarConfig || navConfig" >
+    <app-main-top-nav-bar navbar [config]="vm.selectionsTitle ? selectionBarConfig : null" >
+        {{ vm.selectionsTitle || 'Bilder' }}
     </app-main-top-nav-bar>
 
     <div cdkSelectableContainer #selectableContainer *ngIf="vm.images?.length; else loading"
