--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -3,9 +3,8 @@
 
     <ng-container navbar>
   
-      <app-main-top-nav-bar 
-        [appHide]="!searchBarHidden" 
-        [config]="topNavConfig">
+      <app-main-top-nav-bar  [appHide]="!searchBarHidden"> 
+        Oppdrag
       </app-main-top-nav-bar>
 
       <app-search-bar 
