--- a/apps/kbtv-client/src/app/feature-modules/profile/profile/profile.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/profile/profile/profile.component.html
@@ -1,6 +1,7 @@
 <app-main-skeleton>
 
-  <app-main-top-nav-bar navbar [config]="navConfig">
+  <app-main-top-nav-bar navbar>
+    Profil
   </app-main-top-nav-bar>
 
   <ng-container *ngFor="let action of actions">
