--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,6 +1,7 @@
 <app-main-skeleton>
 
-    <app-main-top-nav-bar navbar [config]="navConfig">
+    <app-main-top-nav-bar navbar>
+        Administrer timer
     </app-main-top-nav-bar>
 
     <ng-container *ngIf="(users$ | async) else loading; let users;">
