--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -1,7 +1,7 @@
 <app-main-skeleton contentWrapperClass="bottom-bar-padding" *ngIf="vm$ | async; let vm">
 
     <ng-container navbar>
-        <app-main-top-nav-bar [config]="navConfig" >
+        <app-main-top-nav-bar>Timestatistikk
         </app-main-top-nav-bar>
         <app-chips-bar [chips]="vm.groupByChips">
         </app-chips-bar>
