--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -1,8 +1,7 @@
 <app-main-skeleton navTogglerDisabled=true contentWrapperClass="p-0">
 
     <ng-container navbar>
-        <app-main-top-nav-bar [config]="navConfig" >
-        </app-main-top-nav-bar>
+        <app-main-top-nav-bar>Timeliste</app-main-top-nav-bar>
         <app-chips-bar [chips]="criteriaChips$ | async"></app-chips-bar>
     </ng-container>
 
