--- a/apps/kbtv-client/src/app/feature-modules/users/user-list/user-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/users/user-list/user-list.component.html
@@ -1,6 +1,7 @@
 <app-main-skeleton>
 
-  <app-main-top-nav-bar navbar [config]="{title: 'Brukere'}">
+  <app-main-top-nav-bar navbar>
+    Brukere
   </app-main-top-nav-bar>
 
   <ng-container *ngIf="(users$ | async) else loading; let users;">
