--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
@@ -1,7 +1,9 @@
 <style>::ng-deep .week-view-bottom-bar > mat-toolbar { box-shadow: none } </style>
 <app-main-skeleton contentWrapperClass="bottom-bar-padding">
 
-  <app-main-top-nav-bar navbar [config]="navConfig$ | async" >
+  <app-main-top-nav-bar navbar *ngIf="titles$ | async; let titles">
+      <span>{{ titles.title }}</span>
+      <span class="mat-caption ml-1">{{ titles.subTitle }}</span>
   </app-main-top-nav-bar>
 
   <app-user-timesheet-week-view [vm]="vm$ | async"
