--- a/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
+++ b/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
@@ -4,7 +4,7 @@ mat-toolbar{
 
 .custom-buttons{ margin-left: 8px; }
 
-.custom-buttons, .primary-button, ion-spinner {
+.custom-buttons, .cancel-button, ion-spinner {
     transition: 
         background-color 100ms linear, 
         border-radius 100ms linear, 
