add flex to title content and new input to show cancel btn

--- a/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
@@ -3,7 +3,7 @@
     <app-button *ngIf="showCancelButton" class="cancel-button" [config]="cancelButton">
     </app-button>
 
-    <span class="mr-auto ellipsis pl-2">
+    <span class="title-container ellipsis">
 
         <ng-content></ng-content>
 
