--- a/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
+++ b/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
@@ -11,6 +11,13 @@ mat-toolbar{
         color 100ms linear;
 }
 
+.title-container{
+    margin-right:auto;
+    padding-left: 8px; 
+    display: flex;
+    align-items: center;   
+}
+
 ::ng-deep.main-top-nav-overlay{
     color:white;
     position:absolute;
