add next/prev week buttons for desktop

--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
@@ -1,9 +1,14 @@
-<style>::ng-deep .week-view-bottom-bar > mat-toolbar { box-shadow: none } </style>
+<style>
+  ::ng-deep .week-view-bottom-bar > mat-toolbar { box-shadow: none } 
+  @media (max-width: 959px) { .week-button { display: none } }
+</style>
 <app-main-skeleton contentWrapperClass="bottom-bar-padding">
 
   <app-main-top-nav-bar navbar *ngIf="titles$ | async; let titles">
+      <button mat-icon-button class="week-button" (click)="previousWeek()"><mat-icon>chevron_left</mat-icon></button>
       <span>{{ titles.title }}</span>
       <span class="mat-caption ml-1">{{ titles.subTitle }}</span>
+      <button mat-icon-button class="week-button" (click)="nextWeek()"><mat-icon>chevron_right</mat-icon></button>
   </app-main-top-nav-bar>
 
   <app-user-timesheet-week-view [vm]="vm$ | async"
