add next/prev buttons for desktop for image viewer

--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/shared-mission/components/image-viewer/image-viewer.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/shared-mission/components/image-viewer/image-viewer.component.html
@@ -1,4 +1,4 @@
-<app-main-top-nav-bar [config]="navConfig" overlayMode=true>
+<app-main-top-nav-bar [config]="navConfig" alwaysShowCancelButton=true overlayMode=true>
 </app-main-top-nav-bar>
 
 <ng-container *ngIf="loadingImage$ | async; let loadingImage">
@@ -12,7 +12,13 @@
 </ng-container>
 
 <div *ngIf="images?.length" class="page-counter-container">
-  <span class="page-counter">{{ index + 1 }} / {{ images?.length }}</span>
+  
+  <span class="page-counter">
+    <button mat-icon-button (click)="previousImage()"><mat-icon>chevron_left</mat-icon></button>
+    {{ index + 1 }} / {{ images?.length }}
+    <button mat-icon-button (click)="nextImage()"><mat-icon>chevron_right</mat-icon></button>
+  </span>
+  
 </div>
 
 
