add mission map feature for displaying missions with google-maps

--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -3,7 +3,7 @@
 
     <ng-container navbar>
   
-      <app-main-top-nav-bar  [appHide]="!searchBarHidden"> 
+      <app-main-top-nav-bar  [appHide]="!searchBarHidden" [config]="navConfig"> 
         Oppdrag
       </app-main-top-nav-bar>
 
