add closest mission button to home screen

--- a/apps/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.html
+++ b/apps/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.html
@@ -1,6 +1,6 @@
 <div class="mat-elevation-z2 mission-card">
 
-    <span class="mat-body-2 m-3">
+    <span class="mat-body-2 m-2 ml-3">
       Sist besøkte oppdrag    
     </span>
 
