--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
@@ -9,8 +9,7 @@
     <mat-divider inset=true></mat-divider>
   </a>
  
-  <a href="https://www.google.com/maps/dir/?api=1&destination={{ mission.address }}&travelmode=driving"
-    target="_blank">
+  <a href="{{ mission | appMissionDirectionsUrl }}" target="_blank">
     <app-list-item>
       <mat-icon left-side class="pl-2 pr-2">directions_car</mat-icon>
       Veibeskrivelse 
