lazy load google maps api

--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-map/mission-map/mission-map-view/mission-map-view.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-map/mission-map/mission-map-view/mission-map-view.component.html
@@ -1,4 +1,5 @@
-<google-map class="mission-map" height="auto" width="100%" [center]="center$ | async" [zoom]="8">
+<google-map *ngIf="mapsLoaded$ | async" class="mission-map" height="auto" width="100%" 
+    [center]="center$ | async" [zoom]="8">
     <ng-container *ngIf="missions">
         <ng-container *ngFor="let mission of missions; trackBy: trackByFn">
             <map-marker #markerEl="mapMarker" *ngIf="mission.position" 
